--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
     "extends": ["react-app", "plugin:jsx-a11y/recommended"],
-    "plugins": ["jsx-a11y"]
+    "plugins": ["jsx-a11y"],
+    "rules": {
+      "jsx-a11y/no-autofocus": "off"
+    }
   }
   
