--- a/package.json
+++ b/package.json
@@ -35,5 +35,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-axe": "^3.5.4",
+    "@axe-core/react": "^4.7.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.7.0",
+    "jest-axe": "^8.0.0"
   }
 }
