--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     ]
   },
   "devDependencies": {
-    "react-axe": "^3.5.4",
     "@axe-core/react": "^4.7.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "html-validate": "^8.4.0",
     "jest": "^29.7.0",
-    "jest-axe": "^8.0.0"
+    "jest-axe": "^8.0.0",
+    "react-axe": "^3.5.4"
   }
 }
